Make ComponentSpan and MtasSpanWithinQuery have final fields